# substrate-node-template

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: check-master.yml  check.yml
pallets/dao/: Cargo.toml
pallets/dao/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/did/: Cargo.toml
pallets/did/src/: benchmarking.rs  weights.rs
pallets/profile/: Cargo.toml
pallets/profile/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/task/: Cargo.toml
pallets/task/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/weights/: pallet_dao.rs  pallet_profile.rs  pallet_task.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
runtime/src/weights/: dao.rs  frame_benchmarking.rs  frame_system.rs  mod.rs  pallet_balances.rs  pallet_dao.rs  pallet_profile.rs  pallet_task.rs  pallet_timestamp.rs  profile.rs  task.rs
