[package]
name = "pallet-did"
version = '0.0.25'
description = "Decentralized identifiers (DIDs) pallet."
authors = ['UNIVERSALDOT FOUNDATION <https://github.com/UniversalDot>']
homepage = 'https://universaldot.foundation'
edition = '2018'
license = 'Apache-2.0'
publish = false
repository = "https://github.com/UniversalDot/universal-dot-node"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-std = { version = "4.0.0-dev", tag = 'monthly-2021-11', git = 'https://github.com/paritytech/substrate.git', default-features = false }
sp-core = { version = "4.0.0-dev", tag = 'monthly-2021-11', git = 'https://github.com/paritytech/substrate.git', default-features = false }
sp-io = { version = "4.0.0-dev", tag = 'monthly-2021-11', git = 'https://github.com/paritytech/substrate.git', default-features = false }
sp-runtime = { version = "4.0.0-dev", tag = 'monthly-2021-11', git = 'https://github.com/paritytech/substrate.git', default-features = false }
frame-benchmarking = { version = "4.0.0-dev", tag = 'monthly-2021-11', git = 'https://github.com/paritytech/substrate.git', default-features = false, optional = true }
frame-support = { version = "4.0.0-dev", tag = 'monthly-2021-11', git = 'https://github.com/paritytech/substrate.git', default-features = false }
frame-system = { version = "4.0.0-dev", tag = 'monthly-2021-11', git = 'https://github.com/paritytech/substrate.git', default-features = false }
pallet-timestamp = { version = "4.0.0-dev", tag = 'monthly-2021-11', git = 'https://github.com/paritytech/substrate.git', default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive",] }

[dev-dependencies]
sp-core = { version = "4.0.0-dev", tag = 'monthly-2021-11', git = 'https://github.com/paritytech/substrate.git' }
pallet-balances = { version = "4.0.0-dev", tag = 'monthly-2021-11', git = 'https://github.com/paritytech/substrate.git' }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-core/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
]
runtime-benchmarks = ["frame-benchmarking"]

